syntax = "proto3";

package user.v1;

import "validate/validate.proto";
import "common/v1/user.proto";

option go_package = "github.com/Artyom099/factory/shared/pkg/proto/user/v1;user_v1";

service UserService {
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
}

message RegisterRequest {
    UserRegistrationInfo info = 1;
}

message UserRegistrationInfo {
    common.v1.UserInfo info = 1;
    string password = 2;
}

message RegisterResponse {
    string user_uuid = 1 [(validate.rules).string.uuid = true];
}

message GetUserRequest {
    string user_uuid = 1 [(validate.rules).string.uuid = true];
}

message GetUserResponse {
    common.v1.User user = 1;
}
